Added Main Design to header!

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
         <meta charset="UTF-8">
         <title>The Witcher 3</title>
+        <link href="./style.css" rel="stylesheet">
 
 
     </head>
@@ -12,23 +13,23 @@
 
     <body>
         <!--Header:-->
-        <div>
+        <div class="header">
             <div class="logo-cont">
                 <div class="logo">
-
-                </div>
+                    <p>HEADER</p>
+                </div>                
             </div>
 
 
-            <div>
-                <div>
-
+            <div class="btn-cont">
+                <div class="head-btn1">
+                    <a href="#">BTN1</a>
                 </div>
-                <div>
-
+                <div class="head-btn2">
+                    <a href="#">BTN2</a>
                 </div>
-                <div>
-                    
+                <div class="head-btn3">
+                    <a href="#">BTN3</a>
                 </div>
             </div>
         </div>    
