(hopefully) finalized Header

--- a/index.html
+++ b/index.html
@@ -13,27 +13,26 @@
 
     <body>
         <!--Header:-->
-        <div class="header">
-            <div class="logo-cont">
-                <div class="logo">
-                    <p>HEADER</p>
-                </div>                
-            </div>
+            <div class="header">
+                <div class="logo-cont">
+                    <div class="logo">
+                        <p>HEADER</p>
+                    </div>                
+                </div>
 
 
-            <div class="btn-cont">
-                <div class="head-btn1">
-                    <a href="#">BTN1</a>
+                <div class="btn-cont">
+                    <div class="head-btn1">
+                        <a href="#" class="head-btn">Join us!</a>
+                    </div>
+                    <div class="head-btn2">
+                        <a href="#" class="head-btn">Wiki</a>
+                    </div>
+                    <div class="head-btn3">
+                        <a href="#" class="head-btn">Star Wars</a>
+                    </div>
                 </div>
-                <div class="head-btn2">
-                    <a href="#">BTN2</a>
-                </div>
-                <div class="head-btn3">
-                    <a href="#">BTN3</a>
-                </div>
-            </div>
-        </div>    
-
+            </div>    
 
     </body>
 </html>
