--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                     <div class="subhero">
                         <p>This website has some subtext that goes here under the maintitle. It's a smaller font and the color is lower contrast</p>
                     </div>
-                    <div class="sign-in">
-                        <a class="sign-btn" href="#">Sign up</a>
+                    <div class="sign-cont">
+                        <div class="sign-in">
+                            <a class="sign-btn" href="#">Sign up</a>
+                        </div>
                     </div>
                 </div>
 
@@ -56,8 +58,6 @@
                     </div>
                 </div>
             </div>
-
-
 
 
 
