Kinad finished hero.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 
     <body>
+
+
         <!--Header:-->
             <div class="header">
                 <div class="logo-cont">
@@ -57,6 +59,14 @@
                         <img class="img" src="./images/placeholder.png" alt="Placeholder">
                     </div>
                 </div>
+            </div>
+
+
+            <!--Information:-->
+            <div>
+
+
+
             </div>
 
 
