added info part

--- a/index.html
+++ b/index.html
@@ -63,8 +63,32 @@
 
 
             <!--Information:-->
-            <div>
+            <div class="main-info">
+                <div class="info-cont">
+                    <div class="info-head">
+                        <p>Some random information.</p>
+                    </div>
+                </div>
 
+
+                <div class="img-cont">
+                    <div class="img1">
+                        <img src="./images/img.png" alt="placeholder">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="img2">
+                        <img src="./images/img.png" alt="placeholder">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="img3">
+                        <img src="./images/img.png" alt="placeholder">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="img4">
+                        <img src="./images/img.png" alt="placeholder">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                </div>
 
 
             </div>
