redefinded style from img1-4 to img0

--- a/index.html
+++ b/index.html
@@ -72,20 +72,20 @@
 
 
                 <div class="img-cont">
-                    <div class="img1">
-                        <img src="./images/img.png" alt="placeholder">
+                    <div class="img1 img0">
+                        <img class="img0" src="./images/img.png" alt="placeholder">
                         <p>this is some subtext under an illustration or image</p>
                     </div>
-                    <div class="img2">
-                        <img src="./images/img.png" alt="placeholder">
+                    <div class="img2 img0">
+                        <img class="img0" src="./images/img.png" alt="placeholder">
                         <p>this is some subtext under an illustration or image</p>
                     </div>
-                    <div class="img3">
-                        <img src="./images/img.png" alt="placeholder">
+                    <div class="img3 img0">
+                        <img class="img0" src="./images/img.png" alt="placeholder">
                         <p>this is some subtext under an illustration or image</p>
                     </div>
-                    <div class="img4">
-                        <img src="./images/img.png" alt="placeholder">
+                    <div class="img4 img0">
+                        <img class="img0" src="./images/img.png" alt="placeholder">
                         <p>this is some subtext under an illustration or image</p>
                     </div>
                 </div>
