added mainframe for quotes

--- a/index.html
+++ b/index.html
@@ -91,6 +91,17 @@
                 </div>
 
 
+                <!--Quote:-->
+                <div class="main-qut">
+                    <div class="qut-cont">
+                        <div class="qut">
+
+                        </div>
+                    </div>
+
+                </div>
+
+
             </div>
 
 
