added borders to info images

--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
 
                 <div class="img-cont">
                     <div class="img1 img0">
-                        <img class="img0" src="./images/img.png" alt="placeholder">
+                        <img class="img-border" src="./images/img.png" alt="placeholder">
                         <p>this is some subtext under an illustration or image</p>
                     </div>
                     <div class="img2 img0">
-                        <img class="img0" src="./images/img.png" alt="placeholder">
+                        <img class="img-border" src="./images/img.png" alt="placeholder">
                         <p>this is some subtext under an illustration or image</p>
                     </div>
                     <div class="img3 img0">
-                        <img class="img0" src="./images/img.png" alt="placeholder">
+                        <img class="img-border" src="./images/img.png" alt="placeholder">
                         <p>this is some subtext under an illustration or image</p>
                     </div>
                     <div class="img4 img0">
-                        <img class="img0" src="./images/img.png" alt="placeholder">
+                        <img class="img-border" src="./images/img.png" alt="placeholder">
                         <p>this is some subtext under an illustration or image</p>
                     </div>
                 </div>
