--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
                 <div class="main-qut">
                     <div class="qut-cont">
                         <div class="qut">
-
+                            <P>This is an quote, or a testimonial from a customer. 
+                                Maybe it's just filling up space, or maybe people will actualy read it. 
+                                Who knows? All I know is that it looks nice.
+                            </P>
                         </div>
                     </div>
 
