added Qoute and some minor fixes.

--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
             <div class="main-hero">
                 <div class="hero-cont">
                     <div class="hero">
-                        <p>This website is awesome</p>
+                        This website is awesome
                     </div>
                     <div class="subhero">
-                        <p>This website has some subtext that goes here under the maintitle. It's a smaller font and the color is lower contrast</p>
+                        This website has some subtext that goes here under the maintitle. 
+                        It's a smaller font and the color is lower contrast
                     </div>
                     <div class="sign-cont">
                         <div class="sign-in">
@@ -89,23 +90,28 @@
                         <p>this is some subtext under an illustration or image</p>
                     </div>
                 </div>
+            </div>
 
 
                 <!--Quote:-->
-                <div class="main-qut">
-                    <div class="qut-cont">
-                        <div class="qut">
-                            <P>This is an quote, or a testimonial from a customer. 
-                                Maybe it's just filling up space, or maybe people will actualy read it. 
-                                Who knows? All I know is that it looks nice.
-                            </P>
-                        </div>
+            <div class="main-qut">
+                <div class="qut-cont">
+                    <div class="qut">
+                        This is an quote, or a testimonial from a customer. 
+                            Maybe it's just filling up space, or maybe people will actualy read it. 
+                            Who knows? All I know is that it looks nice.
+                        
                     </div>
-
                 </div>
-
-
+                <div class="qout-cont">
+                    <div class="qout">
+                        - Thor, God of Thunder
+                    </div>
+                </div>
             </div>
+
+
+            
 
 
 
