added mainframe for call to action

--- a/index.html
+++ b/index.html
@@ -111,6 +111,23 @@
             </div>
 
 
+            <!--Call for action:-->
+            <div class="main-call">
+                <div class="call-cont">
+                    <div class="call-text">
+                        <div class="call-head">
+                            Call to action! It's time!
+                        </div>
+                        <div class="call-subhead">
+                            Sign up for our product by clicking that button right over there!
+                        </div>
+                    </div>
+                    <div class="call-sign">
+                        <a href="#" class="call-btn">Sign up</a>
+                    </div>
+                </div>
+            </div>
+
             
 
 
