finalized CtA part

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
 
 
-        <!--Header:-->
+            <!--Header:-->
             <div class="header">
                 <div class="logo-cont">
                     <div class="logo">
@@ -37,7 +37,7 @@
             </div>    
         
         
-        <!--Hero:-->
+            <!--Hero:-->
             <div class="main-hero">
                 <div class="hero-cont">
                     <div class="hero">
@@ -122,8 +122,10 @@
                             Sign up for our product by clicking that button right over there!
                         </div>
                     </div>
-                    <div class="call-sign">
-                        <a href="#" class="call-btn">Sign up</a>
+                    <div class="call-sign-cont">
+                        <div class="call-sign">
+                            <a href="#" class="call-btn">Sign up</a>
+                        </div>
                     </div>
                 </div>
             </div>
