added frame for footer

--- a/index.html
+++ b/index.html
@@ -131,7 +131,12 @@
             </div>
 
             
+            <!--Footer:-->
+            <div class="main-foot">
+                <div class="copyr">
 
+                </div>
+            </div>
 
 
     </body>
