added footer, finished project

--- a/index.html
+++ b/index.html
@@ -134,10 +134,9 @@
             <!--Footer:-->
             <div class="main-foot">
                 <div class="copyr">
-
+                    Copyright (c) MarefSilver 2022
                 </div>
             </div>
-
 
     </body>
 </html>
