reedited OGOL to LOGO

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="header">
                 <div class="logo-cont">
                     <div class="logo">
-                        <p>HEADER OGOL</p>
+                        <p>HEADER LOGO</p>
                     </div>                
                 </div>
 
