--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
         <meta charset="UTF-8">
-        <title>The Witcher 3</title>
+        <title>Landing Page Project</title>
         <link href="./style.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
@@ -25,13 +25,13 @@
 
                 <div class="btn-cont">
                     <div class="head-btn1">
-                        <a href="#" class="head-btn">Join us!</a>
+                        <a href="#" class="head-btn">Header Btn 1</a>
                     </div>
                     <div class="head-btn2">
-                        <a href="#" class="head-btn">Wiki</a>
+                        <a href="#" class="head-btn">Header Btn 2</a>
                     </div>
                     <div class="head-btn3">
-                        <a href="#" class="head-btn">Star Wars</a>
+                        <a href="#" class="head-btn">Header Btn 3</a>
                     </div>
                 </div>
             </div>    
