added Copyright symbol.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <!--Footer:-->
             <div class="main-foot">
                 <div class="copyr">
-                    Copyright (c) MarefSilver 2022
+                    Copyright &copy MarefSilver 2022
                 </div>
             </div>
 
